--- a/CSS/background.css
+++ b/CSS/background.css
@@ -17,7 +17,7 @@ ul{
 }
 a{
     text-decoration: none;
-    font-size: 30px
+    font-size: 30px;
 }
 a:link{
     color: darkgray;
@@ -27,12 +27,12 @@ a:visited{
 }
 h1{
     font-size: 60px;
-    text-align: center; 
     background: linear-gradient(transparent 20%,#fff 50%);
 }
 h2{
     font-size: 40px;
-    margin: 20px
+    margin: 20px;
+     background: linear-gradient(transparent 20%,#fff 50%);
 }
 
 #tex{
